--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma20_PMP_roughness_max20_HR.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma20_PMP_roughness_max20_HR.cfg
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_init_ANT_config              = '/home/x_frare/data/Bedmachine_Antarctica/BedMachineAntarctica_v3_2km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_PD_ANT_config                = '/home/x_frare/data/Bedmachine_Antarctica/BedMachineAntarctica_v3_2km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/data/Bedmachine_Antarctica/BedMachineAntarctica_v3_2km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -392,9 +392,15 @@
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
     do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
-    remove_shelves_larger_than_PD_config         = .TRUE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
+    remove_shelves_larger_than_PD_config         = .FALSE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
     continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
+    
+    do_use_ISMIP_future_shelf_collapse_forcing_config   = .true.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
+    shelf_collapse_type_config                          = 'calving'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
+    ISMIP_future_shelf_collapse_forcing_filename_config = '/home/x_frare/data/retreat_masks/mask_ocean_calving_bedmachine_2km.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
+    retreat_mask_without_time_config                    = .true.                    ! If set to TRUE, the retreat mask is not time-dependent and is applied throughout the entire simulation
+    retreat_mask_applied_only_to_open_ocean_config      = .true.                    ! If set to TRUE, the retreat mask is only applied to open ocean points (not to points that are grounded or floating ice)
 
   ! == Ice dynamics - stabilisation
   ! ===============================
