--- a/config-files_tetralith/config_tetralith_PD_maxphi_30_SHR_ctrl2500_phi_50percent.cfg
+++ b/config-files_tetralith/config_tetralith_PD_maxphi_30_SHR_ctrl2500_phi_50percent.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_maxphi_30_SHR_retreat_SMB_50percent'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_maxphi_30_SHR_ctrl2500_phi_50percent'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -394,14 +394,10 @@
     calving_threshold_thickness_shelf_config     = 1.0                              ! Threshold ice thickness for ice shelf calving front in the "threshold_thickness" calving law
     calving_threshold_thickness_sheet_config     = 0.0                              ! Threshold ice thickness for ice sheet calving front in the "threshold_thickness" calving law
     max_calving_rounds_config                    = 20                               ! Maximum number of calving loops during chain reaction
-    do_remove_shelves_config                     = .TRUE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
+    do_remove_shelves_config                     = .FALSE.                          ! If set to TRUE, all floating ice is always instantly removed (used in the ABUMIP-ABUK experiment)
     remove_shelves_larger_than_PD_config         = .TRUE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
     continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
-
-    do_use_ISMIP_future_shelf_collapse_forcing_config   = .FALSE.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
-    shelf_collapse_type_config                          = 'BMB'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
-    ISMIP_future_shelf_collapse_forcing_filename_config = '/home/x_frare/data/retreat_masks/mask_iceshelf_calving.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
 
   ! == Ice dynamics - stabilisation
   ! ===============================
@@ -457,7 +453,7 @@
     filename_bed_roughness_NAM_config            = ''
     filename_bed_roughness_EAS_config            = ''
     filename_bed_roughness_GRL_config            = ''
-    filename_bed_roughness_ANT_config            = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma99_PMP_roughness_max30_SHR/main_output_ANT_LAST.nc'
+    filename_bed_roughness_ANT_config            = '/home/x_frare/data/Sediments/till_friction_angle_maxphi30_gamma99_SHR50percent.nc'
     ! Timeframes to read from the bed roughness file (set to 1E9    if the file has no time dimension)
     timeframe_bed_roughness_NAM_config           = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_bed_roughness_EAS_config           = 1E9
@@ -641,7 +637,7 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/SMB/RACMO_SMB_1979_2016_50percent.nc'
+    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
