--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma99_PMP_roughness_M11_Hb-500to500m_SHR.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI_gamma99_PMP_roughness_M11_Hb-500to500m_SHR.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma99_PMP_roughness_Martin2011_SHR'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma99_PMP_roughness_M11_Hb-500to500m_SHR'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -473,9 +473,9 @@
     slid_ZI_phi_fric_uniform_config              = 30.0                             ! Uniform value for phi_fric in the Zoet-Iverson sliding law
     ! Parameters for bed roughness parameterisations
     Martin2011till_phi_Hb_min_config             = -500.0                           ! Martin et al. (2011) bed roughness parameterisation: low-end  Hb  value of bedrock-dependent till friction angle
-    Martin2011till_phi_Hb_max_config             = 0.0                              ! Martin et al. (2011) bed roughness parameterisation: high-end Hb  value of bedrock-dependent till friction angle
-    Martin2011till_phi_min_config                = 25.0                             ! Martin et al. (2011) bed roughness parameterisation: low-end  phi value of bedrock-dependent till friction angle
-    Martin2011till_phi_max_config                = 45.0                             ! Martin et al. (2011) bed roughness parameterisation: high-end phi value of bedrock-dependent till friction angle
+    Martin2011till_phi_Hb_max_config             = 500.0                              ! Martin et al. (2011) bed roughness parameterisation: high-end Hb  value of bedrock-dependent till friction angle
+    Martin2011till_phi_min_config                = 5.0                             ! Martin et al. (2011) bed roughness parameterisation: low-end  phi value of bedrock-dependent till friction angle
+    Martin2011till_phi_max_config                = 30.0                             ! Martin et al. (2011) bed roughness parameterisation: high-end phi value of bedrock-dependent till friction angle
 
   ! == Bed roughness inversion by nudging
   ! =====================================
@@ -489,6 +489,7 @@
     bed_roughness_nudging_t_end_config           = 40000.0                           ! [yr]      Latest   model time when nudging is allowed
     generic_bed_roughness_min_config             = 0.1                              ! [?]       Smallest allowed value for the first  inverted bed roughness field
     generic_bed_roughness_max_config             = 30.0                             ! [?]       Largest  allowed value for the first  inverted bed roughness field
+    choice_bed_roughness_nudging_limit_method_config = 'Martin2011'                      !           Choice of method to limit the bed roughness changes during nudging: "uniform", "Martin2011"
 
     ! Basal inversion model based on flowline-averaged values of H and dH/dt
     bednudge_H_dHdt_flowline_t_scale_config      = 150.0                            ! [yr]      Timescale
